# geiger_counter

./: CMakeLists.txt  Cargo.toml  README.md
.cargo/: config.toml
src/: CMakeLists.txt  lcd1602.c  lcd1602.h  main.c  main.rs
