[package]
name = "geiger_counter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.7.6"
cortex-m-rt = "0.7.2"
embedded-hal = "0.2.7"
embedded-time = "0.12.1"
panic-halt = "0.2.0"
rp-pico = "0.5.0"
defmt = "0.3.2"
defmt-rtt = "0.4.0"         # global logger
panic-probe = { version = "0.3.0", features = ["print-defmt"] }  # print stacktrace on panic
